syntax = "proto3";

package Serialization;

message ResponseBus
{
    string Name = 1;
    uint64 stop_count = 2;
    uint64 unique_stop_count = 3;
    int32 road_route_length = 4;
    double geo_route_length = 5;
}